[package]
name = "sanscript_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sanscript_common = {path="../SanScript-Common"}
num-traits = "0.2"
num-derive = "0.4.0"
num = "0.4"
strum = "0.25.0"
strum_macros = "0.25"
